# training-pipeline

./: .gitignore  README.md  build_facts_dataset.py  build_finetune_dataset.py  collect_syllabi_agent.py  evaluate_structured_json.py  evaluate_trained_extractor.py  generate_pipeline_data_report.py  ingest_jsonl_from_urls.py  label_with_deepseek.py  label_with_gpt4o.py  make_golden_template.py  merge_seed_into_template.py  merge_teacher_labels.py  pipeline_errors.py  pipeline_runner.py  process_syllabi_jsonl.py  pyproject.toml  study_plan_compose.py  syllabi_index_csv_to_jsonl.py  syllabus_schema.py  syllabus_torch_compat.py  train_frontier.py  train_hf_structured_extractor.py  us_freshman_core_syllabi_index.csv  validate_golden_facts.py  validate_training_readiness.py
docs/: EDGE_DEPLOYMENT_PLAN.md  ML_EVAL_RUBRIC.md  RISK_REGISTER.md  TRAIN_REPORT_TEMPLATE.md
edge/: __init__.py  benchmark_edge_inference.py  export_quantized_model.py  privacy_telemetry.py  release_gates.py  study_plan_runtime.py
notebooks/: run_full_syllabus_pipeline.ipynb  train_syllabus_extractor_colab.ipynb
tests/: test_build_facts_dataset.py  test_build_finetune_dataset.py  test_collect_syllabi_agent.py  test_edge_release_and_telemetry.py  test_edge_study_plan_runtime.py  test_fault_injection_pipeline.py  test_ingest_jsonl_from_urls.py  test_merge_teacher_labels.py  test_ml_eval_scripts.py  test_pipeline_runner.py  test_process_syllabi_jsonl.py  test_study_plan_compose.py  test_syllabus_schema.py  test_syllabus_torch_compat.py  test_train_hf_mlflow_helpers.py  test_validate_golden_facts.py  (+3 more)
(+1 files in other folders)
