[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "training-pipeline"
version = "0.1.0"
description = "Public syllabus collection utilities for training data generation."
requires-python = ">=3.10"
dependencies = [
  "duckduckgo-search>=6.2.0",
  "PyMuPDF>=1.24.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
train = [
  "accelerate>=1.0.0",
  "datasets>=3.0.0",
  "mlflow>=3.0.0",
  "peft>=0.19.0",
  "transformers>=4.50.0",
  "trl>=0.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
